# cmake_examples

./: README.md
ex01/: CMakeLists.txt  main.cpp
ex02/: CMakeLists.txt  myapp.cpp  mymath.cpp  mymath.h
ex03/: CMakeLists.txt  mymath.cpp
ex04/: CMakeLists.txt  myapp.cpp  mymath.cpp
ex05/: CMakeLists.txt
ex06/: CMakeLists.txt
ex07/: CMakeLists.txt
ex08/: CMakeLists.txt
ex085/: CMakeLists.txt
ex09/: CMakeLists.txt
ex095/: CMakeLists.txt  my.cmake
ex096/: CMakeLists.txt
ex096/sub_dir/: CMakeLists.txt
ex10/: CMakeLists.txt
ex11/: CMakeLists.txt
ex12/: CMakeLists.txt  main.cpp
